--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -117,7 +117,7 @@ p { font-size:1.5em; }
 
 p { font-size:1.5em; 
 	float:right;
-	color:red; 
+	color: green; 
 	padding-right:5%; }
 
 .languages {
@@ -125,8 +125,9 @@ p { font-size:1.5em;
 
 .languages img {
 	max-width:40%;
-	padding-left:10%;
-	float:left;
-	margin-left:auto;
-	margin-right:auto; }
+	padding-left:0;
+	float:right;
+	margin-left:0;
+	margin-right:0;
+	padding-right:5%; }
 }
