--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -115,16 +115,16 @@ p { font-size:1.5em; }
 .logolarge { float:left; 
 	width:40%; 
 	top:5px; 
-	padding-left:5px; }
+	padding-left:10px; }
 
 .logolarge img { width:100%; 
 	float:left; }
 
 p { font-size:1.5em; 
 	float:right;
-	color: teal; 
+	color: gold; 
 	padding-right:5%;
-	padding-top:40px; }
+	padding-top:30%; }
 
 .languages {
 	width:40%; 
