--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -122,7 +122,7 @@ p { font-size:1.5em; }
 
 p { font-size:1.5em; 
 	float:right;
-	color: maroon; 
+	color: blue; 
 	padding-right:5%;
 	padding-top:15%; }
 
