--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -114,7 +114,7 @@ p { font-size:1.5em; }
 
 .logolarge { float:left; 
 	width:40%; 
-	margin-top:15%; 
+	margin-top:10%; 
 	padding-left:10px; }
 
 .logolarge img { width:100%; 
@@ -122,7 +122,7 @@ p { font-size:1.5em; }
 
 p { font-size:1.5em; 
 	float:right;
-	color: blue; 
+	color: slateblue; 
 	padding-right:5%;
 	padding-top:15%; }
 
