--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -115,14 +115,14 @@ p { font-size:1.5em; }
 .logolarge { float:left; 
 	width:40%; 
 	margin-top:10%; 
-	padding-left:10px; }
+	padding-left:20px; }
 
 .logolarge img { width:100%; 
 	float:left; }
 
 p { font-size:1.5em; 
 	float:right;
-	color: slateblue; 
+	color: teal; 
 	padding-right:5%;
 	padding-top:15%; }
 
