--- a/marvelousprocesss/style.css
+++ b/marvelousprocesss/style.css
@@ -125,8 +125,9 @@ li { font-family:helvetica; line-height:1.4em;
 
 article { width:80%; 
 	padding-bottom:10px; padding-right:10%; padding-bottom: 10px; }
-div { padding-left: 15%; }
-img { height: 225px; float: left;
+div { margin-left: 15%; margin-right: 15%; padding: 10px; }
+.images { background-color: #f2f2f2; overflow-x: scroll; }
+img { height: 225px; display: inline;
 	padding-right: 20px; padding-bottom: 60px; }
 
 
