--- a/marvelousprocesss/style.css
+++ b/marvelousprocesss/style.css
@@ -153,7 +153,7 @@ h2 { font-family: BebasNeue; font-weight: bold;
 	color: #e60000;
 	text-align: left; font-size: 7em; 
 	width: 50%;
-	padding-left: 15%; padding-top: 20%;
+	padding-left: 15%; padding-top: 70px;
 	clear: both; }
 
 h3 { font-family: BebasNeue; font-weight: bold;
@@ -161,8 +161,9 @@ h3 { font-family: BebasNeue; font-weight: bold;
 	text-align: left; font-size: 4em; 
 	width: 50%;
 	padding-left: 15%;
-	padding-bottom: 20px; padding-top: 60px;
+	padding-bottom: 20px; padding-top: 50px;
 	clear: both; }
+
 h4 { font-family: BebasNeue; font-weight: bold;
 	color: #e60000;
 	font-size: 2em;
@@ -199,6 +200,8 @@ img { height: 225px; display: inline-block;
 	
 #one { background-color: #e60000;
 	height: 100vh; width: 100vw; }
+#half { background-color: #e60000;
+	height: 66vh; width: 100vw; }
 #two { padding-bottom: 33vh; }
 
 #three li { padding-left: 15%; padding-bottom: 15px; }
