--- a/marvelousprocesss/style.css
+++ b/marvelousprocesss/style.css
@@ -215,12 +215,20 @@ video { padding-left: 15%; }
 
 button { display: block; float: left;
 	margin-left: 15%; margin-top: 30px; margin-bottom: 60px;
-	padding: 25px;
-	border: none;
+	padding-left: 0; padding-right: 0; padding-top: 9px; padding-bottom: 5px;
+	border: 2px solid #e60000;
 	font-family: BebasNeue; font-weight: bold;
-	background-color: #e60000; }
+	background-color: white;
+	-webkit-transition: background-color .5s; /* Safari */
+	transition: background-color .5s; }
 button a { font-family: BebasNeue; font-weight: bold;
-	font-size: 20px; color: white; padding: 0; }
+	font-size: 20px; color: #e60000; 
+	padding-top: 10px; padding-bottom: 7px; padding-right: 20px; padding-left: 20px;
+	-webkit-transition: color .5s; /* Safari */
+	transition: color .5s; }
+
+button:hover { background-color: #e60000; }
+button a:hover { color: white; }
 
 
 
