--- a/MassTinting/style.css
+++ b/MassTinting/style.css
@@ -87,7 +87,6 @@ nav .navtitle {
 	width: auto;
 	display: inline-block;
 	vertical-align: top; 
-	background-color: purple; 
 }
 nav h1 {
 	height: 70px; line-height: 70px;
@@ -111,15 +110,18 @@ nav h1 {
 	overflow: hidden;
 	clear: both;
 }
-.headercontainer .text {
-	margin: auto;
+.headercontainer .gradient {
 	width: 100%; height: 100%;
 	background: linear-gradient(rgba(0,28,78,0), rgba(0,28,78,.2));
+}
+.headercontainer .text {
+	position: relative; top: 50%;
+	transform: translateY(-50%);
 }
 .headercontainer h1 {
 	font-family: 'Roboto Condensed', helvetica, sans-serif;
 	font-weight: 700; font-size: 70px;
-	padding: 150px 20px 0px 20px;
+	padding: 0px 20px 0px 20px;
 }
 .headercontainer h2 {
 	font-family: 'Roboto', helvetica, sans-serif;
@@ -186,6 +188,7 @@ nav h1 {
 	text-align: center;
 	display: inline-block;
 	padding: 0% 3%;
+	vertical-align: top;
 }
 .singlebub h3 {
 	padding-bottom: 10px;
@@ -332,19 +335,66 @@ footer {
 	width: 100%;
 	background-color: #2c3e50;
 	color: white;
+	text-align: center;
+	min-height: 200px;
 }
-.column {
-	width: 25%;
+footer img {
 	display: inline-block;
-	background-color: orange;
+	width: 100px;
+	padding: 15px 40px 0px 0px;
+	vertical-align: top;
+	display: none;
+}
+.address {
+	padding: 0; display: inline-block;
 	vertical-align: top;
 }
+.column {
+	width: auto; max-width: 300px;
+	padding-top: 40px; padding-right: 50px;
+	text-align: left;
+	display: inline-block;
+	//background-color: orange;
+	vertical-align: top;
+}
+.column.about {
+	padding-right: 0px;
+}
 
 
-@media (max-width: 600px) {
+@media (max-width: 850px) {
+	.column {
+		display: block;
+		margin-left: auto; margin-right: auto;
+		width: 250px;
+		//background-color: green;
+		padding: 20px 0px;
+	}
+	.column.about {
+		padding-bottom: 40px;
+	}
+	textarea {
+		width: 80vw;
+	}
+}
+@media (max-width: 640px) {
 	.singlebub {
 		width: 70%;
 		display: block;
 		padding: 0px 15% 50px 15%;
+	}
+	.intro {
+		padding: 40px 40px;
+	}
+	.formcontainer {
+		max-width: 80vw;
+	}
+	textarea {
+		width: 95%;
+	}
+}
+@media (max-width: 460px) {
+	input {
+		width: 95%;
 	}
 }
