--- a/MassTinting/style.css
+++ b/MassTinting/style.css
@@ -67,7 +67,7 @@ h3 {
 	font-size: 26px;
 }
 p {
-	font-size: 14px; line-height: 17px;
+	font-size: 14px; line-height: 18px;
 }
 h4 {
 	font-family: 'Roboto Condensed'; font-weight: 700;
@@ -151,7 +151,7 @@ nav h1 {
 	max-width: 500px;
 }
 .intro p {
-	font-size: 20px; line-height: 25px;
+	font-size: 20px; line-height: 27px;
 	text-align: center;
 }
 
@@ -388,8 +388,8 @@ footer img {
 		display: block;
 		margin-left: auto; margin-right: auto;
 		width: 250px;
-		//background-color: green;
 		padding: 20px 0px;
+		//text-align: center;
 	}
 	.column.about {
 		padding-bottom: 40px;
