--- a/luciaconchellodotcom/style.css
+++ b/luciaconchellodotcom/style.css
@@ -138,6 +138,7 @@ body {
 #home {
 	width: 235px;
 	margin-left: auto; margin-right: auto;
+	margin-bottom: 100px;
 	opacity: 0;
 	-webkit-transition: .5s opacity 2.25s ease-out;
   	-moz-transition: .5s opacity 2.25s ease-out;
@@ -206,6 +207,9 @@ body {
 	margin-bottom: 160px;
 	margin-top: 80px;
 	transition: padding .25s ease-out;
+}
+#bodycontainer.projectmenu {
+	padding-left: 40px; padding-right: 40px;
 }
 #mobilenav {
 	display: block; 
@@ -331,6 +335,74 @@ body {
 
 
 
+/*----------------------------------------------------
+                        ABOUT ME
+----------------------------------------------------*/
+#bodycontainer.about {
+		padding: 100px 77px 20px 77px;
+	}
+.abouttext {
+	width: 100%; 
+	//background: lightgreen;
+	display: inline-block;
+	margin: 0; padding: 0;
+	vertical-align:top;
+}
+.abouttext .text {
+	//background: lime;
+	display: inline-block;
+	padding-right: 10px
+}
+.abouttext .text h1 {
+	color: #ea2933;
+	font-size: 20px;
+	letter-spacing: 10px;
+	padding-bottom: 32px;
+}
+.abouttext .text p {
+	font-size: 15px; line-height: 19px;
+}
+
+/*.image.about {
+	width: 50%;
+	display: inline-block;
+	margin: 0; padding: 0;
+	vertical-align:top;
+}*/
+.image.about.top {
+	width: 100%;
+	display: block;
+	margin: 0; padding: 0;
+	vertical-align:top;
+}
+.image.about.side {
+	display: none;
+}
+.about img {
+	width: 100%;
+}
+hr {
+	margin-top: 80px;
+	margin-bottom: 70px;
+	height: 1px;
+	border-width: 1px;
+	margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-color: #cccccc;
+    box-shadow: none;
+    border-top: none; border-left: none; border-right: none;
+}
+
+
+
+
+
+
+
+
+
+
 
 /*----------------------------------------------------
 ------------------------------------------------------
@@ -343,6 +415,7 @@ body {
 	color: #ea2933;
 	padding: 54px 12px 38px 12px;
 	clear: both;
+	font-variant-ligatures: none;
 }
 .project h2 {
     font-size: 18px;
@@ -407,65 +480,43 @@ img.right {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 /*----------------------------------------------------
-                        ABOUT ME
+                       PROJECT MENU
 ----------------------------------------------------*/
-.abouttext {
-	width: 100%; 
-	//background: lightgreen;
-	display: inline-block;
-	margin: 0; padding: 0;
-	vertical-align:top;
+.thumbnail {
+	width: 100%; display: inline-block; 
+	padding-bottom: 100px; padding-right: 0px;
+	vertical-align: top;
 }
-.abouttext .text {
-	//background: lime;
-	display: inline-block;
-	padding-right: 10px
+.thumbnail:nth-child(3n) {
+	padding-right: 0px;
 }
-.abouttext .text h1 {
-	color: #ea2933;
-	font-size: 20px;
-	letter-spacing: 10px;
-	padding-bottom: 32px;
+.thumbnail:nth-child(2n) {
+	padding-right: 0px;
 }
-.abouttext .text p {
-	font-size: 15px; line-height: 19px;
-}
-
-/*.image.about {
-	width: 50%;
-	display: inline-block;
-	margin: 0; padding: 0;
-	vertical-align:top;
-}*/
-.image.about.top {
-	width: 100%;
-	display: block;
-	margin: 0; padding: 0;
-	vertical-align:top;
-}
-.image.about.side {
-	display: none;
-}
-.about img {
+.thumbnail img {
 	width: 100%;
 }
-hr {
-	margin-top: 80px;
-	margin-bottom: 70px;
-	height: 1px;
-	border-width: 1px;
-	margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-color: #cccccc;
-    box-shadow: none;
-    border-top: none; border-left: none; border-right: none;
+.thumbnail a {
+	text-decoration: none; 
+	text-align: center;
 }
-
-
-
-
+.thumbnail a h2 {
+	font-size: 14px;
+	padding-top: 20px;
+}
 
 
 
@@ -736,6 +787,72 @@ hr {
 
 
 
+.waffleimgs {
+	width: 100%; background-color: #f2f2f2;
+	margin-top: 25px;
+}
+.waffleimgs img {
+	vertical-align: middle;
+	display:inline-block;
+	padding-right: 2%;
+}
+.waffleimgs img:nth-child(1) {
+	width: 38%;
+}
+
+.waffleimgs.warhol img:nth-child(2) {
+	width: 27%;
+}
+.waffleimgs.warhol img:nth-child(3) {
+	width:27%;
+}
+.waffleimgs.one img:nth-child(2) {
+	width: 57%; 
+}
+.waffleimgs.haring img:nth-child(2) {
+	width: 30%; 
+}
+.waffleimgs.haring img:nth-child(3) {
+	width: 24%; 
+}
+.waffleimgs.johns img:nth-child(2) {
+	width: 34%; padding: 0px 12%;
+}
+.waffleimgs.koons img:nth-child(2) {
+	width: 26%; 
+}
+.waffleimgs.koons img:nth-child(3) {
+	width: 28%; 
+}
+.waffleimgs.claes img:nth-child(2) {
+	width: 25%; 
+}
+.waffleimgs.claes img:nth-child(3) {
+	width: 29%; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -747,6 +864,18 @@ hr {
 ====================================================*/
 
 @media only screen and (min-width: 500px) {
+	/*--DESIGN PROJECTS--*/
+	.thumbnail {
+		width: 45%; display: inline-block; 
+		padding-bottom: 100px; padding-right: 4%;
+		vertical-align: top;
+	}
+	.thumbnail:nth-child(3n) {
+		padding-right: 0px;
+	}
+	.thumbnail:nth-child(2n) {
+		padding-right: 4%;
+	}
 	/*--ABOUT--*/
 	#bodycontainer.about {
 		padding: 100px 77px 20px 77px;
@@ -798,6 +927,9 @@ hr {
 	#bodycontainer {
 		padding: 00px 77px 20px 77px; 
 		transition: padding .25s ease-out;
+	}
+	#bodycontainer.projectmenu {
+		padding-left: 77px; padding-right: 77px;
 	}
 	.burger {
 		left: 88px;
@@ -873,6 +1005,18 @@ hr {
 
 
 @media only screen and (min-width: 768px) {
+	/*--DESIGN PROJECTS--*/
+	.thumbnail {
+		width: 30%; display: inline-block; 
+		padding-bottom: 100px; padding-right: 4%;
+		vertical-align: top;
+	}
+	.thumbnail:nth-child(2n) {
+		padding-right: 4%;
+	}
+	.thumbnail:nth-child(3n) {
+		padding-right: 0px;
+	}
 	/*--TYPEFACE--*/
 	.typesample .left {
 		float: left;
