--- a/luciaconchellodotcom/style.css
+++ b/luciaconchellodotcom/style.css
@@ -500,10 +500,13 @@ img.right {
 	padding-bottom: 100px; padding-right: 0px;
 	vertical-align: top;
 }
-.thumbnail:nth-child(3n) {
+.thumbnail:nth-of-type(odd) {
+		padding-right: 0px;
+	}
+.thumbnail:nth-of-type(3n) {
 	padding-right: 0px;
 }
-.thumbnail:nth-child(2n) {
+.thumbnail:nth-of-type(2n) {
 	padding-right: 0px;
 }
 .thumbnail img {
@@ -517,6 +520,12 @@ img.right {
 	font-size: 14px;
 	padding-top: 20px;
 }
+
+
+
+
+
+
 
 
 
@@ -797,38 +806,47 @@ img.right {
 	padding-right: 2%;
 }
 .waffleimgs img:nth-child(1) {
-	width: 38%;
+	width: 100%;
 }
 
 .waffleimgs.warhol img:nth-child(2) {
-	width: 27%;
+	width: 40%;
+	padding: 20px 3% 20px 6%;
 }
 .waffleimgs.warhol img:nth-child(3) {
-	width:27%;
+	width:40%;
+	padding: 20px 6% 20px 3%;
 }
 .waffleimgs.one img:nth-child(2) {
-	width: 57%; 
+	width: 80%;
+	padding: 20px 9%; 
 }
 .waffleimgs.haring img:nth-child(2) {
-	width: 30%; 
+	width: 45%;
+	padding: 20px 3% 20px 6%; 
 }
 .waffleimgs.haring img:nth-child(3) {
-	width: 24%; 
+	width: 36%; 
+	padding: 20px 6% 20px 3%;
 }
 .waffleimgs.johns img:nth-child(2) {
-	width: 34%; padding: 0px 12%;
+	width: 34%; padding: 20px 30%;
 }
 .waffleimgs.koons img:nth-child(2) {
-	width: 26%; 
+	width: 39%;
+	padding: 20px 3% 20px 6%; 
 }
 .waffleimgs.koons img:nth-child(3) {
-	width: 28%; 
+	width: 42%; 
+	padding: 20px 6% 20px 3%;
 }
 .waffleimgs.claes img:nth-child(2) {
-	width: 25%; 
+	width: 36%;
+	padding: 20px 3% 20px 7%; 
 }
 .waffleimgs.claes img:nth-child(3) {
-	width: 29%; 
+	width: 42%; 
+	padding: 20px 7% 20px 4%;
 }
 
 
@@ -870,10 +888,13 @@ img.right {
 		padding-bottom: 100px; padding-right: 4%;
 		vertical-align: top;
 	}
-	.thumbnail:nth-child(3n) {
+	.thumbnail:nth-of-type(3n) {
 		padding-right: 0px;
 	}
-	.thumbnail:nth-child(2n) {
+	.thumbnail:nth-of-type(2n) {
+		padding-right: 0px;
+	}
+	.thumbnail:nth-of-type(odd) {
 		padding-right: 4%;
 	}
 	/*--ABOUT--*/
@@ -919,7 +940,67 @@ img.right {
 	.nationscreens img:nth-child(2) {
 	    padding-top: 30px;
 	}
+
+
+	/*--WAFFLES--*/
+	.waffleimgs {
+		width: 100%; background-color: #f2f2f2;
+		margin-top: 25px;
+	}
+	.waffleimgs img {
+		vertical-align: middle;
+		display:inline-block;
+		padding-right: 2%;
+	}
+	.waffleimgs img:nth-child(1) {
+		width: 38%;
+	}
+
+	.waffleimgs.warhol img:nth-child(2) {
+		width: 27%;
+		padding: 0px 2% 0px 0px;
+	}
+	.waffleimgs.warhol img:nth-child(3) {
+		width:27%;
+		padding: 0px 2% 0px 0px;
+	}
+	.waffleimgs.one img:nth-child(2) {
+		width: 57%; 
+		padding: 0px;
+	}
+	.waffleimgs.haring img:nth-child(2) {
+		width: 30%; 
+		padding: 0px 2% 0px 0px;
+	}
+	.waffleimgs.haring img:nth-child(3) {
+		width: 24%; 
+		padding: 0px 2% 0px 0px;
+	}
+	.waffleimgs.johns img:nth-child(2) {
+		width: 34%; padding: 0px 12%;
+	}
+	.waffleimgs.koons img:nth-child(2) {
+		width: 26%; 
+		padding: 0px 2% 0px 0px;
+	}
+	.waffleimgs.koons img:nth-child(3) {
+		width: 28%; 
+		padding: 0px 2% 0px 0px;
+	}
+	.waffleimgs.claes img:nth-child(2) {
+		width: 25%; 
+		padding: 0px 2% 0px 0px;
+	}
+	.waffleimgs.claes img:nth-child(3) {
+		width: 29%; 
+		padding: 0px 2% 0px 0px;
+	}
+
+
+
 }
+
+
 
 
 @media only screen and (min-width: 650px) {
@@ -1011,10 +1092,13 @@ img.right {
 		padding-bottom: 100px; padding-right: 4%;
 		vertical-align: top;
 	}
-	.thumbnail:nth-child(2n) {
+	.thumbnail:nth-of-type(odd) {
 		padding-right: 4%;
 	}
-	.thumbnail:nth-child(3n) {
+	.thumbnail:nth-of-type(2n) {
+		padding-right: 4%;
+	}
+	.thumbnail:nth-of-type(3n) {
 		padding-right: 0px;
 	}
 	/*--TYPEFACE--*/
